feat: create a custom component
- add to parent module
- export component
- usage component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
 <app-hello></app-hello>
-
+<app-example-chapter></app-example-chapter>
 <h2>Ejemplos prácticos sobre data binding</h2>
 
 <div id="practiceInterpolation">
