feat: add global component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <router-outlet></router-outlet>
 <app-hello></app-hello>
 <app-hello></app-hello>
+<app-first></app-first>
 <app-example-chapter></app-example-chapter>
