feat: add custom menu
- add routerLink

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
+<div>
+  <ul>
+    <li>
+      <a routerLink="/map">Mapa</a>
+    </li>
+    <li>
+      <a routerLink="/report">Report</a>
+    </li>
+    <li>
+      <a routerLink="/hello">Hola Mundo</a>
+    </li>
+    <li>
+      <a routerLink="/first">Primera componente</a>
+    </li>
+    <li>
+      <a routerLink="/example">Ejemplo</a>
+    </li>
+  </ul>
+</div>
 <router-outlet></router-outlet>
