feat: communication between components using input
- add interface

--- a/src/app/modules/maps/map-render/map-render.component.html
+++ b/src/app/modules/maps/map-render/map-render.component.html
@@ -1,1 +1,12 @@
-<p>map-render works!</p>
+<p>
+  {{ data.ubigeo }}
+ </p>
+ 
+<p>
+ {{ data.nombre }}
+</p>
+
+<p>
+  x: {{ data.point[0] }}
+  y: {{ data.point[1] }}
+ </p>
