feat: add ngfor using input

--- a/src/app/modules/maps/map-container/map-container.component.html
+++ b/src/app/modules/maps/map-container/map-container.component.html
@@ -1,2 +1,3 @@
 <h2>Contenedor de mapas</h2>
 <app-map-render [data]="ubigeoSelected"></app-map-render>
+<app-map-render [data]="ubigeoSelected" *ngFor="let ubigeoSelected of ubigeosSelected"></app-map-render>
