feat: communication between components using output

--- a/src/app/modules/maps/map-container/map-container.component.html
+++ b/src/app/modules/maps/map-container/map-container.component.html
@@ -1,3 +1,4 @@
 <h2>Contenedor de mapas</h2>
-<app-map-render [data]="ubigeoSelected"></app-map-render>
-<app-map-render [data]="ubigeoSelected" *ngFor="let ubigeoSelected of ubigeosSelected"></app-map-render>
+<app-map-render [data]="ubigeoSelected" (clickMap)="mapClicler($event)"></app-map-render>
+<app-map-render [data]="ubigeoSelected" (clickMap)="mapClicler($event)"
+*ngFor="let ubigeoSelected of ubigeosSelected"></app-map-render>
