feat: add custom style

--- a/src/app/modules/maps/map-container/map-container.component.html
+++ b/src/app/modules/maps/map-container/map-container.component.html
@@ -1,4 +1,6 @@
-<h2>Contenedor de mapas</h2>
-<app-map-render [data]="ubigeoSelected" (clickMap)="mapClicler($event)"></app-map-render>
-<app-map-render [data]="ubigeoSelected" (clickMap)="mapClicler($event)"
-*ngFor="let ubigeoSelected of ubigeosSelected"></app-map-render>
+<div class="container">
+  <h2>Contenedor de mapas</h2>
+  <app-map-render [data]="ubigeoSelected" (clickMap)="mapClicler($event)"></app-map-render>
+  <app-map-render [data]="ubigeoSelected" (clickMap)="mapClicler($event)"
+  *ngFor="let ubigeoSelected of ubigeosSelected"></app-map-render>
+</div>
