feat: add module and page contact

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,10 @@
         <li class="nav-item" routerLinkActive>
           <a class="nav-link" routerLink="/example">Ejemplo</a>
         </li>
+
+        <li class="nav-item" routerLinkActive>
+          <a class="nav-link" routerLink="/contact">Contactos</a>
+        </li>
         
       </ul>
     </div>
